--- a/index.html
+++ b/index.html
@@ -3,127 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Pro | Digital Agency</title>
+    <title>Aamir Pro | Shaheen Digital Agency</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --bg: #0d0d0d; --card-bg: #1a1a1a; --red: #ff3131; --yellow: #ffbd14; --text-gray: #b0b0b0; }
+        :root { --bg: #0a0a0a; --card: #161616; --red: #ff3131; --yellow: #ffbd14; --white: #ffffff; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-        body { background-color: var(--bg); color: #fff; }
+        body { background-color: var(--bg); color: var(--white); }
 
-        /* --- Custom Header with Image Style --- */
+        /* --- 3D Shaheen Logo & Header with Search --- */
         header { 
-            padding: 25px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
-            border-bottom: 2px solid var(--red); position: relative;
+            padding: 15px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
+            border-bottom: 2px solid var(--red); position: sticky; top: 0; z-index: 1000;
         }
-        header::after { content: ''; position: absolute; bottom: -2px; right: 0; width: 35%; height: 2px; background: var(--yellow); }
-        .logo { font-size: 24px; font-weight: 800; }
-        .logo span { color: var(--red); }
-        .nav-meta { display: flex; gap: 15px; font-size: 13px; color: #666; align-items: center; }
+        .logo-area { display: flex; align-items: center; gap: 10px; }
+        .shaheen-logo {
+            font-size: 30px; background: linear-gradient(45deg, var(--white), var(--yellow), var(--red));
+            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+            filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.8)); font-weight: 900;
+        }
+        .header-right { display: flex; align-items: center; gap: 20px; }
+        .search-box { position: relative; }
+        .search-box input { 
+            background: #222; border: 1px solid #444; color: #fff; padding: 8px 35px 8px 15px; 
+            border-radius: 20px; outline: none; font-size: 13px;
+        }
+        .search-box i { position: absolute; right: 12px; top: 10px; color: #888; }
+        .nav-menu { font-size: 22px; color: var(--yellow); cursor: pointer; }
 
-        /* --- Hero Section Adjustment --- */
-        .hero { display: flex; align-items: center; padding: 80px 5%; gap: 50px; flex-wrap: wrap; }
-        .profile-box { 
-            width: 190px; height: 190px; border-radius: 50%; padding: 7px;
-            background: linear-gradient(135deg, var(--yellow), var(--red));
-            box-shadow: 0 0 30px rgba(255, 49, 49, 0.4);
+        /* --- Hero Section --- */
+        .hero { display: flex; align-items: center; padding: 80px 5%; gap: 50px; flex-wrap: wrap; background: radial-gradient(circle at top right, #200, #0a0a0a); }
+        .profile-wrap { 
+            width: 180px; height: 180px; border-radius: 50%; padding: 6px;
+            background: linear-gradient(135deg, var(--white), var(--yellow), var(--red));
+            box-shadow: 0 10px 30px rgba(255, 49, 49, 0.5);
         }
-        .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 5px solid #000; }
-        .hero-info h2 { font-size: 24px; font-weight: 300; }
-        .hero-info h1 { font-size: 3.5rem; font-weight: 800; margin: 5px 0; }
-        .hero-info h1 span { color: var(--yellow); }
-        .hero-info p { color: var(--text-gray); max-width: 450px; margin-bottom: 30px; line-height: 1.6; }
-        .btn-touch { background: var(--yellow); color: #000; padding: 14px 35px; border-radius: 30px; text-decoration: none; font-weight: 800; font-size: 15px; }
+        .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 4px solid #000; }
+        .hero-text h1 { font-size: 3rem; font-weight: 900; }
+        .hero-text h1 span { color: var(--yellow); }
 
-        /* --- Large Vertical Skills Sections --- */
-        .label { padding: 40px 5% 20px; font-size: 22px; font-weight: 700; color: #fff; }
-        .skills-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 25px; }
-        .skill-tile { 
-            background: var(--card-bg); border-radius: 15px; display: flex; align-items: center; 
-            padding: 40px; text-decoration: none; color: white; border-left: 12px solid var(--red);
-            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        /* --- Clickable Vertical Skill Sections (4 Skills) --- */
+        .section-label { padding: 40px 5% 20px; font-size: 24px; font-weight: 800; color: var(--yellow); }
+        .skill-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 20px; }
+        .skill-card { 
+            background: var(--card); border-radius: 15px; display: flex; align-items: center; 
+            padding: 30px; text-decoration: none; color: white; border-left: 8px solid var(--red);
+            transition: 0.4s; position: relative; overflow: hidden;
         }
-        .skill-tile:hover { transform: scale(1.03); background: #222; border-left-color: var(--yellow); }
-        .icon-wrap { width: 70px; height: 70px; background: #000; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 30px; color: var(--yellow); margin-right: 30px; }
-        .skill-tile h3 { font-size: 24px; margin-bottom: 8px; }
-        .skill-tile p { color: var(--text-gray); font-size: 15px; }
+        .skill-card:hover { transform: translateX(15px); background: #222; border-left-color: var(--yellow); }
+        .skill-card i { font-size: 35px; margin-right: 25px; width: 50px; text-align: center; }
+        
+        /* --- Footer (Side-by-Side with WhatsApp) --- */
+        footer { background: #000; padding: 60px 5% 30px; border-top: 4px solid var(--red); margin-top: 60px; }
+        .footer-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; }
+        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
+        .f-col p, .f-col a { color: #888; text-decoration: none; font-size: 13px; display: block; margin-bottom: 10px; }
+        .social-icons { display: flex; gap: 15px; margin-top: 20px; }
+        .social-icons a i { font-size: 20px; transition: 0.3s; }
+        
+        /* Original Brand Colors */
+        .fa-facebook { color: #1877F2; } .fa-instagram { color: #E4405F; } .fa-linkedin { color: #0A66C2; }
+        .whatsapp-btn { background: #25D366; color: white !important; padding: 10px 20px; border-radius: 5px; font-weight: bold; text-align: center; margin-top: 10px; }
 
-        /* --- Footer Side-by-Side Tiles --- */
-        .footer-tiles { 
-            display: grid; grid-template-columns: repeat(3, 1fr); 
-            gap: 20px; padding: 50px 5%; background: #000; margin-top: 60px;
-        }
-        .f-card { background: #141414; padding: 30px; border-radius: 15px; border-bottom: 4px solid transparent; }
-        .f-card:hover { border-bottom-color: var(--red); }
-        .f-card h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
-        .f-card p, .f-card a { color: var(--text-gray); font-size: 14px; text-decoration: none; display: block; margin-bottom: 12px; }
-        .f-socials { display: flex; gap: 12px; margin-top: 20px; }
-        .f-socials i { font-size: 18px; color: #fff; background: #2a2a2a; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 50%; }
-
-        @media (max-width: 850px) {
-            .hero { text-align: center; justify-content: center; }
-            .footer-tiles { grid-template-columns: 1fr; }
-        }
+        @media (max-width: 768px) { .footer-container { grid-template-columns: 1fr; text-align: center; } .social-icons { justify-content: center; } }
     </style>
 </head>
 <body>
 
     <header>
-        <div class="logo">AAMIR<span>PRO</span></div>
-        <div class="nav-meta">menu | #farc-btn <i class="fas fa-info-circle"></i> <i class="fas fa-bars"></i></div>
+        <div class="logo-area">
+            <div class="shaheen-logo"><i class="fas fa-dove"></i> AAMIR</div>
+        </div>
+        <div class="header-right">
+            <div class="search-box">
+                <input type="text" placeholder="Search services...">
+                <i class="fas fa-search"></i>
+            </div>
+            <div class="nav-menu"><i class="fas fa-bars-staggered"></i></div>
+        </div>
     </header>
 
     <section class="hero">
-        <div class="profile-box">
+        <div class="profile-wrap">
             <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
         </div>
-        <div class="hero-info">
-            <h2>I'm</h2>
-            <h1>Aamir <span>Ahmad</span></h1>
-            <p>Digital Marketing Expert | 3 Years of Experience in Facebook & TikTok Ads</p>
-            <a href="https://wa.me/923482066656" class="btn-touch">GET IN TOUCH</a>
+        <div class="hero-text">
+            <h2>Specialist</h2>
+            <h1>AAMIR <span>AHMAD</span></h1>
+            <p>3 Years of Scaling Brands via Data-Driven Ads & Development.</p>
         </div>
     </section>
 
-    <div class="label">Skills-section</div>
-    <div class="skills-stack">
-        <a href="facebook.html" class="skill-tile">
-            <div class="icon-wrap"><i class="fab fa-facebook-f"></i></div>
-            <div class="info">
-                <h3>Facebook Ads Specialist</h3>
-                <p>Scaling e-commerce brands with 3 years of data-driven strategies. (Click to view full info)</p>
-            </div>
+    <div class="section-label">Our Expertise</div>
+    <div class="skill-stack">
+        <a href="facebook.html" class="skill-card">
+            <i class="fab fa-facebook-f" style="color:#1877F2;"></i>
+            <div><h3>Facebook Marketing Specialist</h3><p>Scaling e-commerce stores with high ROAS.</p></div>
         </a>
-
-        <a href="tiktok.html" class="skill-tile">
-            <div class="icon-wrap"><i class="fab fa-tiktok"></i></div>
-            <div class="info">
-                <h3>TikTok Marketing Expert</h3>
-                <p>Capturing trends with viral creatives and high ROAS management. (Click to view full info)</p>
-            </div>
+        <a href="tiktok.html" class="skill-card">
+            <i class="fab fa-tiktok" style="color:#00f2ea;"></i>
+            <div><h3>TikTok Ad Strategist</h3><p>Viral creatives and trend-based scaling.</p></div>
+        </a>
+        <a href="ecommerce.html" class="skill-card">
+            <i class="fas fa-shopping-cart" style="color:var(--yellow);"></i>
+            <div><h3>E-commerce Expert</h3><p>End-to-end Shopify and local brand management.</p></div>
+        </a>
+        <a href="developer.html" class="skill-card">
+            <i class="fas fa-code" style="color:var(--red);"></i>
+            <div><h3>Website Developer</h3><p>High-converting landing pages and stores.</p></div>
         </a>
     </div>
 
-    <div class="label">Footer grid</div>
-    <div class="footer-tiles">
-        <div class="f-card">
-            <h4>About Me</h4>
-            <p>Professional Digital Marketer specializing in paid advertising for the past 3 years.</p>
-        </div>
-        <div class="f-card">
-            <h4>Contact Details</h4>
-            <a href="mailto:lftaamir8@gmail.com">lftaamir8@gmail.com</a>
-            <p>WhatsApp: +92 348 2066656</p>
-        </div>
-        <div class="f-card">
-            <h4>Social Channels</h4>
-            <div class="f-socials">
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-whatsapp"></i>
-                <i class="fab fa-facebook-f"></i>
+    <footer>
+        <div class="footer-container">
+            <div class="f-col">
+                <h4>About Me</h4>
+                <p>Digital marketing professional helping brands reach their maximum potential through tech and ads.</p>
+            </div>
+            <div class="f-col">
+                <h4>Contact Me</h4>
+                <p>Email: lftaamir8@gmail.com</p>
+                <p>Phone: +92 348 2066656</p>
+                <a href="https://wa.me/923482066656" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> WhatsApp Me</a>
+            </div>
+            <div class="f-col">
+                <h4>Social Links</h4>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
             </div>
         </div>
-    </div>
+    </footer>
 
 </body>
 </html>
