--- a/index.html
+++ b/index.html
@@ -3,134 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Pro | Shaheen Digital Agency</title>
+    <title>Aamir Pro | Shaheen Digital</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --bg: #0a0a0a; --card: #161616; --red: #ff3131; --yellow: #ffbd14; --white: #ffffff; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
         body { background-color: var(--bg); color: var(--white); }
 
-        /* --- 3D Shaheen Logo & Header with Search --- */
+        /* --- Shaheen 3D Header --- */
         header { 
             padding: 15px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
             border-bottom: 2px solid var(--red); position: sticky; top: 0; z-index: 1000;
         }
-        .logo-area { display: flex; align-items: center; gap: 10px; }
-        .shaheen-logo {
-            font-size: 30px; background: linear-gradient(45deg, var(--white), var(--yellow), var(--red));
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent;
-            filter: drop-shadow(2px 4px 6px rgba(0,0,0,0.8)); font-weight: 900;
-        }
+        .logo-area { display: flex; align-items: center; gap: 12px; }
+        .shaheen-logo { font-size: 35px; color: var(--yellow); filter: drop-shadow(0px 0px 8px var(--red)); }
+        .logo-text { font-size: 22px; font-weight: 900; letter-spacing: 1px; }
+
         .header-right { display: flex; align-items: center; gap: 20px; }
         .search-box { position: relative; }
         .search-box input { 
             background: #222; border: 1px solid #444; color: #fff; padding: 8px 35px 8px 15px; 
-            border-radius: 20px; outline: none; font-size: 13px;
+            border-radius: 20px; outline: none;
         }
         .search-box i { position: absolute; right: 12px; top: 10px; color: #888; }
-        .nav-menu { font-size: 22px; color: var(--yellow); cursor: pointer; }
 
-        /* --- Hero Section --- */
-        .hero { display: flex; align-items: center; padding: 80px 5%; gap: 50px; flex-wrap: wrap; background: radial-gradient(circle at top right, #200, #0a0a0a); }
-        .profile-wrap { 
-            width: 180px; height: 180px; border-radius: 50%; padding: 6px;
-            background: linear-gradient(135deg, var(--white), var(--yellow), var(--red));
-            box-shadow: 0 10px 30px rgba(255, 49, 49, 0.5);
-        }
-        .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 4px solid #000; }
-        .hero-text h1 { font-size: 3rem; font-weight: 900; }
-        .hero-text h1 span { color: var(--yellow); }
-
-        /* --- Clickable Vertical Skill Sections (4 Skills) --- */
+        /* --- Skills Section (Clickable) --- */
         .section-label { padding: 40px 5% 20px; font-size: 24px; font-weight: 800; color: var(--yellow); }
         .skill-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 20px; }
         .skill-card { 
             background: var(--card); border-radius: 15px; display: flex; align-items: center; 
-            padding: 30px; text-decoration: none; color: white; border-left: 8px solid var(--red);
-            transition: 0.4s; position: relative; overflow: hidden;
+            padding: 35px; text-decoration: none; color: white; border-left: 10px solid var(--red);
+            transition: 0.4s;
         }
         .skill-card:hover { transform: translateX(15px); background: #222; border-left-color: var(--yellow); }
         .skill-card i { font-size: 35px; margin-right: 25px; width: 50px; text-align: center; }
-        
-        /* --- Footer (Side-by-Side with WhatsApp) --- */
-        footer { background: #000; padding: 60px 5% 30px; border-top: 4px solid var(--red); margin-top: 60px; }
-        .footer-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; }
-        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
-        .f-col p, .f-col a { color: #888; text-decoration: none; font-size: 13px; display: block; margin-bottom: 10px; }
-        .social-icons { display: flex; gap: 15px; margin-top: 20px; }
-        .social-icons a i { font-size: 20px; transition: 0.3s; }
-        
-        /* Original Brand Colors */
-        .fa-facebook { color: #1877F2; } .fa-instagram { color: #E4405F; } .fa-linkedin { color: #0A66C2; }
-        .whatsapp-btn { background: #25D366; color: white !important; padding: 10px 20px; border-radius: 5px; font-weight: bold; text-align: center; margin-top: 10px; }
 
-        @media (max-width: 768px) { .footer-container { grid-template-columns: 1fr; text-align: center; } .social-icons { justify-content: center; } }
+        /* --- Footer --- */
+        footer { background: #000; padding: 60px 5% 30px; border-top: 4px solid var(--red); margin-top: 60px; }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; }
+        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
+        .social-icons { display: flex; gap: 15px; margin-top: 15px; }
+        .social-icons i { font-size: 20px; }
+        .whatsapp-btn { background: #25D366; color: white; padding: 12px; border-radius: 5px; text-align: center; display: block; text-decoration: none; font-weight: bold; margin-top: 15px; }
     </style>
 </head>
 <body>
 
     <header>
         <div class="logo-area">
-            <div class="shaheen-logo"><i class="fas fa-dove"></i> AAMIR</div>
+            <i class="fas fa-dove shaheen-logo"></i>
+            <div class="logo-text">AAMIR<span style="color:var(--red)">PRO</span></div>
         </div>
         <div class="header-right">
-            <div class="search-box">
-                <input type="text" placeholder="Search services...">
-                <i class="fas fa-search"></i>
-            </div>
-            <div class="nav-menu"><i class="fas fa-bars-staggered"></i></div>
+            <div class="search-box"><input type="text" placeholder="Search..."><i class="fas fa-search"></i></div>
+            <i class="fas fa-bars-staggered" style="color:var(--yellow); font-size: 24px;"></i>
         </div>
     </header>
 
-    <section class="hero">
-        <div class="profile-wrap">
-            <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
-        </div>
-        <div class="hero-text">
-            <h2>Specialist</h2>
-            <h1>AAMIR <span>AHMAD</span></h1>
-            <p>3 Years of Scaling Brands via Data-Driven Ads & Development.</p>
-        </div>
-    </section>
-
-    <div class="section-label">Our Expertise</div>
+    <div class="section-label">Our Specialized Skills</div>
     <div class="skill-stack">
         <a href="facebook.html" class="skill-card">
             <i class="fab fa-facebook-f" style="color:#1877F2;"></i>
-            <div><h3>Facebook Marketing Specialist</h3><p>Scaling e-commerce stores with high ROAS.</p></div>
+            <div><h3>Facebook Marketing Specialist</h3><p>Click for full strategy and details.</p></div>
         </a>
         <a href="tiktok.html" class="skill-card">
             <i class="fab fa-tiktok" style="color:#00f2ea;"></i>
-            <div><h3>TikTok Ad Strategist</h3><p>Viral creatives and trend-based scaling.</p></div>
+            <div><h3>TikTok Ad Strategist</h3><p>Click for viral growth details.</p></div>
         </a>
         <a href="ecommerce.html" class="skill-card">
             <i class="fas fa-shopping-cart" style="color:var(--yellow);"></i>
-            <div><h3>E-commerce Expert</h3><p>End-to-end Shopify and local brand management.</p></div>
+            <div><h3>E-commerce Expert</h3><p>Click for store management info.</p></div>
         </a>
         <a href="developer.html" class="skill-card">
             <i class="fas fa-code" style="color:var(--red);"></i>
-            <div><h3>Website Developer</h3><p>High-converting landing pages and stores.</p></div>
+            <div><h3>Website Developer</h3><p>Click for development portfolio.</p></div>
         </a>
     </div>
 
     <footer>
-        <div class="footer-container">
-            <div class="f-col">
-                <h4>About Me</h4>
-                <p>Digital marketing professional helping brands reach their maximum potential through tech and ads.</p>
-            </div>
-            <div class="f-col">
-                <h4>Contact Me</h4>
-                <p>Email: lftaamir8@gmail.com</p>
-                <p>Phone: +92 348 2066656</p>
-                <a href="https://wa.me/923482066656" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> WhatsApp Me</a>
-            </div>
-            <div class="f-col">
-                <h4>Social Links</h4>
+        <div class="footer-grid">
+            <div class="f-col"><h4>About Me</h4><p>Digital Marketing Professional with 3 years of experience.</p></div>
+            <div class="f-col"><h4>Contact</h4><p>lftaamir8@gmail.com</p><a href="https://wa.me/923482066656" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> WhatsApp Me</a></div>
+            <div class="f-col"><h4>Social Presence</h4>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <i class="fab fa-facebook" style="color:#1877F2;"></i>
+                    <i class="fab fa-instagram" style="color:#E4405F;"></i>
+                    <i class="fab fa-linkedin" style="color:#0A66C2;"></i>
                 </div>
             </div>
         </div>
