--- a/index.html
+++ b/index.html
@@ -3,96 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aamir Pro | Shaheen Digital</title>
+    <title>Aamir Pro | Digital Agency</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --bg: #0a0a0a; --card: #161616; --red: #ff3131; --yellow: #ffbd14; --white: #ffffff; }
+        :root { --bg: #0d0d0d; --card-bg: #1a1a1a; --red: #ff3131; --yellow: #ffbd14; --text-gray: #b0b0b0; }
         * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-        body { background-color: var(--bg); color: var(--white); }
+        body { background-color: var(--bg); color: #fff; }
 
-        /* --- Shaheen 3D Header --- */
+        /* --- Header: Exactly as your Original --- */
         header { 
-            padding: 15px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
-            border-bottom: 2px solid var(--red); position: sticky; top: 0; z-index: 1000;
+            padding: 25px 5%; background: #000; display: flex; justify-content: space-between; align-items: center;
+            border-bottom: 2px solid var(--red); position: relative;
         }
-        .logo-area { display: flex; align-items: center; gap: 12px; }
-        .shaheen-logo { font-size: 35px; color: var(--yellow); filter: drop-shadow(0px 0px 8px var(--red)); }
-        .logo-text { font-size: 22px; font-weight: 900; letter-spacing: 1px; }
+        header::after { content: ''; position: absolute; bottom: -2px; right: 0; width: 35%; height: 2px; background: var(--yellow); }
+        
+        /* Real Shaheen Logo Integration */
+        .logo-box { display: flex; align-items: center; gap: 10px; }
+        .shaheen-icon { font-size: 30px; color: var(--yellow); filter: drop-shadow(0 0 5px var(--red)); }
+        .logo { font-size: 24px; font-weight: 800; }
+        .logo span { color: var(--red); }
+        .nav-meta { display: flex; gap: 15px; font-size: 13px; color: #666; align-items: center; }
 
-        .header-right { display: flex; align-items: center; gap: 20px; }
-        .search-box { position: relative; }
-        .search-box input { 
-            background: #222; border: 1px solid #444; color: #fff; padding: 8px 35px 8px 15px; 
-            border-radius: 20px; outline: none;
+        /* --- Hero Section --- */
+        .hero { display: flex; align-items: center; padding: 80px 5%; gap: 50px; flex-wrap: wrap; }
+        .profile-box { 
+            width: 190px; height: 190px; border-radius: 50%; padding: 7px;
+            background: linear-gradient(135deg, var(--yellow), var(--red));
+            box-shadow: 0 0 30px rgba(255, 49, 49, 0.4);
         }
-        .search-box i { position: absolute; right: 12px; top: 10px; color: #888; }
+        .profile-img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; border: 5px solid #000; }
+        .hero-info h1 { font-size: 3.5rem; font-weight: 800; margin: 5px 0; }
+        .hero-info h1 span { color: var(--yellow); }
+        .hero-info p { color: var(--text-gray); max-width: 450px; margin-bottom: 30px; line-height: 1.6; }
+        .btn-touch { background: var(--yellow); color: #000; padding: 14px 35px; border-radius: 30px; text-decoration: none; font-weight: 800; }
 
-        /* --- Skills Section (Clickable) --- */
-        .section-label { padding: 40px 5% 20px; font-size: 24px; font-weight: 800; color: var(--yellow); }
-        .skill-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 20px; }
-        .skill-card { 
-            background: var(--card); border-radius: 15px; display: flex; align-items: center; 
-            padding: 35px; text-decoration: none; color: white; border-left: 10px solid var(--red);
+        /* --- 4 Clickable Large Skills --- */
+        .label { padding: 40px 5% 20px; font-size: 22px; font-weight: 700; color: #fff; }
+        .skills-stack { padding: 0 5%; display: flex; flex-direction: column; gap: 20px; }
+        .skill-tile { 
+            background: var(--card-bg); border-radius: 15px; display: flex; align-items: center; 
+            padding: 35px; text-decoration: none; color: white; border-left: 12px solid var(--red);
             transition: 0.4s;
         }
-        .skill-card:hover { transform: translateX(15px); background: #222; border-left-color: var(--yellow); }
-        .skill-card i { font-size: 35px; margin-right: 25px; width: 50px; text-align: center; }
+        .skill-tile:hover { transform: scale(1.02); background: #222; border-left-color: var(--yellow); }
+        .icon-wrap { width: 60px; height: 60px; background: #000; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 26px; margin-right: 25px; }
 
-        /* --- Footer --- */
-        footer { background: #000; padding: 60px 5% 30px; border-top: 4px solid var(--red); margin-top: 60px; }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px; }
-        .f-col h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
-        .social-icons { display: flex; gap: 15px; margin-top: 15px; }
-        .social-icons i { font-size: 20px; }
-        .whatsapp-btn { background: #25D366; color: white; padding: 12px; border-radius: 5px; text-align: center; display: block; text-decoration: none; font-weight: bold; margin-top: 15px; }
+        /* --- Footer Side-by-Side --- */
+        .footer-tiles { 
+            display: grid; grid-template-columns: repeat(3, 1fr); 
+            gap: 20px; padding: 50px 5%; background: #000; margin-top: 60px;
+        }
+        .f-card { background: #141414; padding: 30px; border-radius: 15px; }
+        .f-card h4 { color: var(--yellow); margin-bottom: 20px; font-size: 16px; text-transform: uppercase; }
+        .f-card p, .f-card a { color: var(--text-gray); font-size: 14px; text-decoration: none; display: block; margin-bottom: 12px; }
+        .f-socials { display: flex; gap: 12px; margin-top: 20px; }
+        .f-socials i { font-size: 20px; width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: #222; }
+
+        @media (max-width: 850px) {
+            .footer-tiles { grid-template-columns: 1fr; }
+        }
     </style>
 </head>
 <body>
 
     <header>
-        <div class="logo-area">
-            <i class="fas fa-dove shaheen-logo"></i>
-            <div class="logo-text">AAMIR<span style="color:var(--red)">PRO</span></div>
+        <div class="logo-box">
+            <i class="fas fa-dove shaheen-icon"></i>
+            <div class="logo">AAMIR<span>PRO</span></div>
         </div>
-        <div class="header-right">
-            <div class="search-box"><input type="text" placeholder="Search..."><i class="fas fa-search"></i></div>
-            <i class="fas fa-bars-staggered" style="color:var(--yellow); font-size: 24px;"></i>
-        </div>
+        <div class="nav-meta">menu | search <i class="fas fa-search"></i> <i class="fas fa-bars-staggered" style="color:var(--yellow)"></i></div>
     </header>
 
-    <div class="section-label">Our Specialized Skills</div>
-    <div class="skill-stack">
-        <a href="facebook.html" class="skill-card">
-            <i class="fab fa-facebook-f" style="color:#1877F2;"></i>
-            <div><h3>Facebook Marketing Specialist</h3><p>Click for full strategy and details.</p></div>
+    <section class="hero">
+        <div class="profile-box">
+            <img src="profile.jpg" alt="Aamir Ahmad" class="profile-img">
+        </div>
+        <div class="hero-info">
+            <h2>I'm</h2>
+            <h1>Aamir <span>Ahmad</span></h1>
+            <p>Digital Marketing Expert | 3 Years scaling brands via Facebook & TikTok Ads.</p>
+            <a href="https://wa.me/923482066656" class="btn-touch">GET IN TOUCH</a>
+        </div>
+    </section>
+
+    <div class="label">Skills-section</div>
+    <div class="skills-stack">
+        <a href="facebook.html" class="skill-tile">
+            <div class="icon-wrap"><i class="fab fa-facebook-f" style="color:#1877F2"></i></div>
+            <div class="info"><h3>Facebook Marketing Specialist</h3><p>Click for full details.</p></div>
         </a>
-        <a href="tiktok.html" class="skill-card">
-            <i class="fab fa-tiktok" style="color:#00f2ea;"></i>
-            <div><h3>TikTok Ad Strategist</h3><p>Click for viral growth details.</p></div>
+        <a href="tiktok.html" class="skill-tile">
+            <div class="icon-wrap"><i class="fab fa-tiktok" style="color:#00f2ea"></i></div>
+            <div class="info"><h3>TikTok Ad Strategist</h3><p>Click for growth strategies.</p></div>
         </a>
-        <a href="ecommerce.html" class="skill-card">
-            <i class="fas fa-shopping-cart" style="color:var(--yellow);"></i>
-            <div><h3>E-commerce Expert</h3><p>Click for store management info.</p></div>
+        <a href="ecommerce.html" class="skill-tile">
+            <div class="icon-wrap"><i class="fas fa-shopping-cart" style="color:var(--yellow)"></i></div>
+            <div class="info"><h3>E-commerce Expert</h3><p>Click for store management.</p></div>
         </a>
-        <a href="developer.html" class="skill-card">
-            <i class="fas fa-code" style="color:var(--red);"></i>
-            <div><h3>Website Developer</h3><p>Click for development portfolio.</p></div>
+        <a href="developer.html" class="skill-tile">
+            <div class="icon-wrap"><i class="fas fa-code" style="color:var(--red)"></i></div>
+            <div class="info"><h3>Website Developer</h3><p>Click for portfolio projects.</p></div>
         </a>
     </div>
 
-    <footer>
-        <div class="footer-grid">
-            <div class="f-col"><h4>About Me</h4><p>Digital Marketing Professional with 3 years of experience.</p></div>
-            <div class="f-col"><h4>Contact</h4><p>lftaamir8@gmail.com</p><a href="https://wa.me/923482066656" class="whatsapp-btn"><i class="fab fa-whatsapp"></i> WhatsApp Me</a></div>
-            <div class="f-col"><h4>Social Presence</h4>
-                <div class="social-icons">
-                    <i class="fab fa-facebook" style="color:#1877F2;"></i>
-                    <i class="fab fa-instagram" style="color:#E4405F;"></i>
-                    <i class="fab fa-linkedin" style="color:#0A66C2;"></i>
-                </div>
+    <div class="footer-tiles">
+        <div class="f-card"><h4>About Me</h4><p>Professional Digital Marketer for 3 years.</p></div>
+        <div class="f-card"><h4>Contact</h4><a href="mailto:lftaamir8@gmail.com">lftaamir8@gmail.com</a><p>+92 348 2066656</p></div>
+        <div class="f-card"><h4>Socials</h4>
+            <div class="f-socials">
+                <i class="fab fa-facebook" style="color:#1877F2"></i>
+                <i class="fab fa-instagram" style="color:#E4405F"></i>
+                <i class="fab fa-whatsapp" style="color:#25D366"></i>
             </div>
         </div>
-    </footer>
+    </div>
 
 </body>
 </html>
